# sentiment-detection-ai

./: .gitignore  README.md  pyproject.toml  sentiment.py  test_sentiment.py  train_sentiment.py
